crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_aggregate_stats_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: stats
---
AggregateStats {
    count: 100,
    mean: 250µs,
    min: 180µs,
    max: 420µs,
    stddev_secs: 4.5e-5,
}
