crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_alibi_config_many_heads.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
AlibiConfig {
    seq_len: 2048,
    n_heads: 32,
    threads_per_block: 256,
}
