crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_attention_mask_config_small.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
AttentionMaskConfig {
    seq_len: 8,
    threads_per_block: 256,
}
