crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_bandwidth_metrics_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: m
---
BandwidthMetrics {
    bytes_read: 1048576,
    bytes_written: 524288,
    duration: 100µs,
    peak_bandwidth_bytes_per_sec: 900000000000.0,
}
