crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_block_sparse_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
BlockSparseConfig {
    seq_len: 2048,
    block_size: 64,
    threads_per_block: 256,
}
