crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_bottleneck_all_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: displays
---
[
    "memory_bound",
    "compute_bound",
    "latency_bound",
    "unknown",
]
