crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_compute_metrics_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: m
---
ComputeMetrics {
    flops: 2000000000,
    duration: 10ms,
    peak_flops: 15000000000000.0,
}
