crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_cuda_memory_pool_config_custom.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
MemoryPoolConfig {
    initial_size: 2097152,
    max_size: 536870912,
    block_size: 512,
    alignment: 128,
}
