crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_cuda_memory_stats_fragmented.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: stats
---
MemoryStats {
    total: 1073741824,
    used: 536870912,
    free: 536870912,
    fragmentation: 0.42,
    num_allocations: 256,
    num_free_blocks: 64,
}
