crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_cuda_memory_stats_full.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: stats
---
MemoryStats {
    total: 268435456,
    used: 268435456,
    free: 0,
    fragmentation: 0.0,
    num_allocations: 1,
    num_free_blocks: 0,
}
